--- a/honeypot-frontend/package.json
+++ b/honeypot-frontend/package.json
@@ -25,6 +25,7 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
+    "@rollup/plugin-replace": "^4.0.0",
     "flag-icons": "^6.4.4",
     "rollup-plugin-copy": "^3.4.0",
     "sass": "^1.52.1",
