Add update watchtower action

--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -43,3 +43,9 @@ jobs:
             HONEYPOT_VERSION=${{ github.ref }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+      # run command with secret
+      - name: Update watchtower
+        id: run
+        run: |
+          echo "Hello World"
+          curl --insecure -v -H "Authorization: Bearer {{ secrets.WATCHTOWER_TOKEN }}" {{ secrets.WATCHTOWER_URL }}
