--- a/honeypot-frontend/package.json
+++ b/honeypot-frontend/package.json
@@ -9,26 +9,28 @@
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^17.0.0",
-    "@rollup/plugin-node-resolve": "^11.0.0",
-    "@rollup/plugin-typescript": "^8.0.0",
-    "@tsconfig/svelte": "^2.0.0",
-    "rollup": "^2.3.4",
+    "@rollup/plugin-commonjs": "^22.0.2",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@rollup/plugin-typescript": "^8.3.4",
+    "@tsconfig/svelte": "^3.0.0",
+    "rollup": "^2.77.3",
     "rollup-plugin-css-only": "^3.1.0",
-    "rollup-plugin-livereload": "^2.0.0",
-    "rollup-plugin-svelte": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "svelte": "^3.0.0",
-    "svelte-check": "^2.0.0",
-    "svelte-preprocess": "^4.0.0",
-    "tslib": "^2.0.0",
-    "typescript": "^4.0.0"
+    "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "svelte": "^3.49.0",
+    "svelte-check": "^2.8.0",
+    "svelte-preprocess": "^4.10.7",
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "@rollup/plugin-replace": "^4.0.0",
-    "flag-icons": "^6.4.4",
+    "flag-icons": "^6.6.4",
+    "frappe-charts": "^1.6.2",
     "rollup-plugin-copy": "^3.4.0",
-    "sass": "^1.52.1",
-    "sirv-cli": "^2.0.0"
+    "sass": "^1.54.4",
+    "sirv-cli": "^2.0.2",
+    "svelte-frappe-charts": "^1.9.2"
   }
 }
